tests/paczka1/small_fuzzy/86206381.err
Error in line 2: S802 A821 30,4
Error in line 1: yvna A821 37,1
Error in line 5: Ss1QFS9Pi A821 40,8
Error in line 8: Ss1QFS9Pi S802 22,0
